Fixed sponsor logo CSS layout issue.

--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -819,6 +819,7 @@ main header {
 #meetups {
     position: relative;
     padding-top: 110px;
+    padding-bottom: 20px;
     background: #f6f9fc;
 }
 
@@ -925,6 +926,13 @@ main header {
 
 .sponsor-logo-last{
     height: 90px;
+}
+
+@media (max-width:320px) {
+    .sponsor-logo, .sponsor-logo-last{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
 }
 
 .event-map{
